added jwt config and jwt authentication in program.cs

--- a/NoteTaking.Api/appsettings.json
+++ b/NoteTaking.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Jwt": {
+    "Key": "SUPER_SECRET_KEY_1234567890",
+    "Issuer": "NoteTaking.Api",
+    "Audience": "NoteTaking.Api",
+    "ExpireMinutes": 60
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=myapp_db3;Username=postgres1;Password=postgres2;"
   },
