run scalar tested Login and Register endpoints and fixed typos from configuration

--- a/NoteTaking.Api/appsettings.json
+++ b/NoteTaking.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Jwt": {
-    "Key": "SUPER_SECRET_KEY_1234567890",
+    "Key": "THIS_IS_A_SUPER_LONG_RANDOM_SECRET_KEY_1234567890!",
     "Issuer": "NoteTaking.Api",
     "Audience": "NoteTaking.Api",
     "ExpireMinutes": 60
