--- a/NoteTaking.Api/appsettings.json
+++ b/NoteTaking.Api/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
+  },
+
   "Jwt": {
     "Key": "THIS_IS_A_SUPER_LONG_RANDOM_SECRET_KEY_1234567890!",
     "Issuer": "NoteTaking.Api",
